Evaluacion-2-Microservicios/deployments/ms-inventory-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-inventory-service-deployment
  labels:
    app: ms-inventory-service-deployment
spec:
  selector:
    matchLabels:
      app: ms-inventory-service-deployment
  replicas: 1
  template:
    metadata:
      labels:
        app: ms-inventory-service-deployment
    spec:
      containers:
        - name: ms-orders
          image: pbust0sn/ms-inventory-service
          ports:
            - containerPort: 8091
