Evaluacion-2-Microservicios/deployments/ms-users-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-users-service-deployment
  labels:
    app: ms-users-service-deployment
spec:
  selector:
    matchLabels:
      app: ms-users-service-deployment
  replicas: 1
  template:
    metadata:
      labels:
        app: ms-users-service-deployment
    spec:
      containers:
        - name: ms-users-service
          image: pbust0sn/ms-users-service
          ports:
            - containerPort: 8096
          resources:
            limits:
              memory: "256Mi"
            requests:
              memory: "200Mi"
