Evaluacion-2-Microservicios/deployments/config-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-service
  template:
    metadata:
      labels:
        app: config-service
    spec:
      containers:
        - name: config-service
          image: pbust0sn/config-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          resources:
            limits:
              memory: "256Mi"
            requests:
              memory: "200Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: config-service
spec:
  selector:
    app: config-service
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: LoadBalancer
