Evaluacion-2-Microservicios/deployments/keycloak-deployment.yaml
# Keycloak Deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: default
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.3.4
          ports:
            - containerPort: 8080
            - containerPort: 8443
          args:
            - start-dev
            - --import-realm 
          volumeMounts:
            - name: realm-volume
              mountPath: /opt/keycloak/data/import
            - name: keycloak-certs
              mountPath: /etc/keycloak/certs
            - name: keycloak-data
              mountPath: /opt/keycloak/data/h2
          resources:
            requests:
              memory: "1Gi"
              cpu: "2"
            limits:
              memory: "2Gi"
              cpu: "4"
      volumes:
        - name: realm-volume
          configMap:
            name: keycloak-realm-config
        - name: keycloak-certs
          secret:
            secretName: keycloak-tls
        - name: keycloak-data
          persistentVolumeClaim:
            claimName: keycloak-pvc
---
# Keycloak Service
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: default
  labels:
    app: keycloak
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
      nodePort: 30081
    - port: 8443
      targetPort: 8443
      protocol: TCP
      name: https
      nodePort: 30443
  selector:
    app: keycloak
