Evaluacion-2-Microservicios/deployments/unified-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-unified
  labels:
    app: mysql-unified
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-unified
  template:
    metadata:
      labels:
        app: mysql-unified
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
        resources:
          limits:
            memory: "256Mi"
          requests:
            memory: "200Mi"
        volumeMounts:
        - name: mysql-initdb
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: mysql-initdb
        configMap:
          name: unified-db-init
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-unified
spec:
  selector:
    app: mysql-unified
  ports:
  - port: 3306
    targetPort: 3306
